--- a/scss/mixins/_settings.global.scss
+++ b/scss/mixins/_settings.global.scss
@@ -697,6 +697,8 @@ $tag-margin: $spacing-tiny !default;
 $tag-close-color: $color-light-grey !default;
 
 $tags-container-width: 70% !default;
+
+$tags-field-container-margin: $spacing-tiny !default;
 $tags-field-container-width: 30% !default;
 
 //
